@startuml UI控件类层次结构
' ==================== UI 控件 + 页面继承体系 ====================
' 版本: 2025-06 — 反映最新源码结构
'   - 新增 ExportPathDialog
'   - 新增 createChart 工厂函数
'   - Page 事件方法签名与源码一致

skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam defaultFontSize 12

' ── Widget 抽象基类 ──
abstract class Widget {
  # int m_x, m_y, m_w, m_h
  ---
  + x() : int
  + y() : int
  + width() : int
  + height() : int
  + contains(mx, my) : bool
  + {abstract} draw()
  + handleMouseMove(mx, my) : bool
  + handleMouseDown(mx, my) : bool
  + handleMouseUp(mx, my) : bool
  + handleKeyDown(vkcode)
  + handleChar(ch)
  + wantsKeyInput() : bool
  + wantsCharInput() : bool
  + ~Widget()
}

' ── Button ──
class Button {
  - int m_radius
  - tstring m_text
  - bool m_isHovered
  - bool m_isPressed
  - bool m_visible
  - function<void()> m_onClick
  - COLORREF m_colorNormal
  - COLORREF m_colorHover
  - COLORREF m_colorPress
  - COLORREF m_colorBorder
  - COLORREF m_colorText
  - COLORREF m_colorShadow
  ---
  + Button(x, y, w, h, text, onClick, radius)
  + contains(mx, my) : bool
  + handleMouseMove(mx, my) : bool
  + handleMouseDown(mx, my) : bool
  + handleMouseUp(mx, my) : bool
  + draw()
  + setText(text) / getText()
  + setVisible(visible) / isVisible()
  + setOnClick(cb)
  + setColorNormal/Hover/Press/Border/Text/Shadow(c)
  + setRadius(r)
}

' ── Card ──
class Card {
  # int m_radius
  # tstring m_title
  # COLORREF m_shadowColor
  # COLORREF m_bgColor
  # COLORREF m_titleColor
  ---
  # drawShadow()
  # drawBody()
  # drawTitle()
  ---
  + Card(x, y, w, h, title, radius)
  + draw()
  + setColors(shadow, bg, title)
  + setTitle(t)
}

' ── DisplayBox ──
class DisplayBox {
  - tstring m_text
  ---
  + DisplayBox(x, y, w, h, title, radius)
  + setText(t)
  + draw()
}

' ── PopupCard ──
class PopupCard {
  - tstring m_message
  - tstring m_detail
  - COLORREF m_accentColor
  - Button m_okBtn
  - bool m_shouldClose
  - bool m_isError
  ---
  + PopupCard(x, y, w, h, title)
  + setMessage(msg)
  + setDetail(detail)
  + setAccentColor(c)
  + setButtonColors(normal, hover, press)
  + setError(isError)
  + draw()
  + showModal()
}

' ── TextInput ──
class TextInput {
  - tstring m_text
  - tstring m_placeholder
  - bool m_focused
  - size_t m_cursorPos
  ---
  - copy()
  - paste()
  - cut()
  ---
  + TextInput(x, y, w, h, placeholder, radius)
  + draw()
  + handleMouseDown(mx, my) : bool
  + handleKeyDown(vkcode)
  + handleChar(ch)
  + wantsKeyInput() : bool
  + wantsCharInput() : bool
  + setText(text) / getText()
  + isFocused() / setFocus(focus)
}

' ── Page ──
class Page {
  # vector<Widget*> m_widgets
  ---
  + draw()
  + handleMouseMove(mx, my) : bool
  + handleMouseDown(mx, my) : bool
  + handleMouseUp(mx, my) : bool
  + handleKeyDown(vkcode) : bool
  + handleChar(ch) : bool
  + ~Page()
}

' ── MainPage ──
class MainPage {
  - ChartSelectCallback m_onChartSelect
  - LoadCSVCallback m_onLoadCSV
  - Callback m_onExport
  - Callback m_onThemeSwitch
  - ColorTheme m_theme
  - Card m_cardData
  - Card m_cardChart
  - Card m_cardActions
  - Card m_cardInstr
  - Card m_cardTips
  - TextInput txtCSV
  - Button btnReadCSV
  - Button btnBarChart
  - Button btnPieChart
  - Button btnLineChart
  - Button btnAreaChart
  - Button btnExport
  - Button btnTheme
  ---
  - drawSidePanel()
  ---
  + MainPage(theme, onChartSelect, onLoadCSV, onExport, onThemeSwitch)
  + draw()
  + getCSVPath()
  + setThemeButtonText(text)
  + applyTheme(theme)
}

' ── ChartPage ──
class ChartPage {
  - Callback m_onBack
  - Callback m_onExport
  - Callback m_onSortAsc / m_onSortDesc
  - Callback m_onSortNameAsc / m_onSortNameDesc
  - Callback m_onReset
  - ColorTheme m_theme
  - Card m_cardTopBar
  - Card m_cardStats
  - Button btnExport / btnReset
  - Button btnSortNameAsc / btnSortNameDesc
  - Button btnSortAsc / btnSortDesc
  - Button btnBack
  - ChartType m_chartType
  - vector<ChartItem> m_data
  - tstring m_title
  - ColorTheme m_chartTheme
  - bool m_hasData
  ---
  + ChartPage(theme, onBack, onExport, sort callbacks, onReset)
  + draw()
  + setChartData(type, data, title, theme)
  + applyTheme(theme)
}

' ── ExportPathDialog（独立对话框，非 Widget 子类）──
class ExportPathDialog <<standalone>> {
  - int m_x, m_y, m_w, m_h
  - tstring m_title
  - tstring m_message
  - tstring m_path
  - ColorTheme m_theme
  - COLORREF m_shadowColor
  - COLORREF m_bgColor
  - COLORREF m_textColor
  - COLORREF m_accentColor
  - TextInput m_input
  - Button m_okButton
  - Button m_cancelButton
  - bool m_done
  - bool m_accepted
  ---
  + ExportPathDialog(theme, title, message, placeholder, defaultPath)
  + showModal() : bool
  + getPath() : tstring
  - applyTheme(theme)
  - draw()
}

' ── 工厂函数（定义于 Pages.h）──
class "createChart()\n(free function)" <<factory>> {
  + (ChartType, title, data, theme) : unique_ptr<Chart>
}

' ── Widget 继承树 ──
Widget <|-- Button
Widget <|-- Card
Card <|-- DisplayBox
Card <|-- PopupCard
Card <|-- TextInput

' ── Page 继承树 ──
Page <|-- MainPage
Page <|-- ChartPage

' ── 组合关系 ──
Page *-- Widget : manages
MainPage *-- Card
MainPage *-- Button
MainPage *-- TextInput
ChartPage *-- Card
ChartPage *-- Button
PopupCard *-- Button : m_okBtn
ExportPathDialog *-- TextInput : m_input
ExportPathDialog *-- Button : m_okButton / m_cancelButton

@enduml
